# AudSync

./: AudSync.excalidraw  CMakeLists.txt  CROSS_PLATFORM_GUIDE.md  Dockerfile.client  Dockerfile.server  MIGRATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  USAGE.md  build.bat  build.sh  demo.sh  docker-build.sh  functionality.md  install_deps.bat  install_deps.ps1  install_deps.sh  run-client.sh  run-server.sh
cmake/: WindowsConfig.cmake  macOSConfig.cmake
include/: AudioBuffer.h  AudioClient.h  AudioNetworkPacket.h  AudioProcessor.h  AudioRecorder.h  AudioServer.h  CaptureSink.h  CaptureSource.h  JitterBuffer.h  Message.h  NetworkManager.h  RenderSink.h  RenderSource.h  SessionLogger.h
src/: AudioBuffer.cpp  AudioClient.cpp  AudioProcessor.cpp  AudioRecorder.cpp  AudioServer.cpp  CaptureSink.cpp  CaptureSource.cpp  JitterBuffer.cpp  Message.cpp  NetworkManager.cpp  RenderSink.cpp  RenderSource.cpp  SessionLogger.cpp  main_client.cpp  main_server.cpp  main_simple.cpp
